[package]
name = "polar-rs"
description = "Polar client library for Rust"
authors = ["Javier E. <jaedns@gmail.com>"]
repository = "https://github.com/javierEd/polar-rs.git"
readme = "README.md"
license = "MIT"
categories = ["api-bindings", "finance"]
keywords = ["api", "payments", "polar"]
version = "0.0.0-alpha.0"
edition = "2024"
publish = true

[dependencies]
reqwest = "0.12"
