[package]
name = "polar-rs"
description = "Polar client library for Rust"
authors = ["Javier E. <jaedns@gmail.com>"]
repository = "https://github.com/javierEd/polar-rs.git"
readme = "README.md"
license = "MIT"
categories = ["api-bindings", "finance"]
keywords = ["api", "payments", "polar"]
version = "0.0.0-alpha.2"
edition = "2024"
publish = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros"] }
wiremock = "0.6.4"
