[package]
name = "polar-rs"
description = "Polar client library for Rust"
authors = ["Javier E. <jaedns@gmail.com>"]
repository = "https://github.com/javierEd/polar-rs.git"
readme = "README.md"
license = "MIT"
categories = ["api-bindings", "finance"]
keywords = ["api", "payments", "polar"]
version = "0.0.0-alpha.6"
edition = "2024"
publish = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.15"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.19", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros"] }
wiremock = "0.6.5"
